--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Муцоев З.А.</title>
 </head>
-<body>      
-    
-        <section class="header">
-            <h1 class="title">Муцоев Зелимхан Аликоевич</h1>
-        </section>
-
-
-
+<body>        
+        
         <section class="banner">
 
             <div class="wrap">
+                <div class="title">Муцоев<br>Зелимхан Аликоевич</div>
                 <div class="subtitle">Депутат Государственной Думы Федерального Собрания Российской Федерации</div>
             </div>
 
