--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Муцоев Зелимхан Аликоевич</title>
     <link rel="icon" type="image/png" href="img/icon.png">
 </head>
@@ -24,19 +25,19 @@
         <section class="links">
             <a href="http://duma.gov.ru/duma/persons/99100781/"  target="_blank">
                 <div class="link">
-                    <img src="img/Gov.svg" width="150px" height="135px" alt="" class="link_img">
+                    <img src="img/Gov.png" width="150px" height="135px" alt="" class="link_img">
                     <div class="link_text">Госдума</div>
                 </div>
             </a>
             <a href="https://www.facebook.com/zmuczoev" target="_blank">
                 <div class="link">
-                    <img src="img/face.svg" width="150px" height="136px" alt="" class="link_img">
+                    <img src="img/face.png" width="150px" height="136px" alt="" class="link_img">
                     <div class="link_text">Коммуникация</div>
                 </div>
             </a>
-            <a href="">
-                <div class="link" target="_blank">
-                    <img src="img/tel.svg" width="150px" height="135px" alt="" class="link_img">
+            <a href="contacts.html">
+                <div class="link">
+                    <img src="img/tel.png" width="150px" height="135px" alt="" class="link_img">
                     <div class="link_text">Контакты</div>
                 </div>
             </a>
