--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>        
         
-
+<div class="content">
     <section class="godlike"><div class="wrap">«Люди, десятки тысяч замечательных, инициативных, с большим сердцем и открытой душой людей побуждают меня вот уже более 20 лет принимать в Государственной Думе такие решения, которые направленны на то, чтобы их жизнь в малых городах, селах и деревнях России и дорогого мне Урала становилась день ото дня более комфортной, а значит счастливой – с верой в завтрашний день!»</div></section>
 
         <section class="banner">
@@ -47,10 +47,10 @@
     </div>
     
     <footer class="footer">
-        <div class="wrap footer_wrap">© 2002-2021. Информационный сайт З.A. Муцоева</div>
+        <div class="footer_wrap">© 2002-2021. Информационный сайт З.A. Муцоева</div>
     </footer>
 
 
-
+</div>
 </body>
 </html>
