--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,8 @@
     <title>Муцоев Зелимхан Аликоевич</title>
     <link rel="icon" type="image/png" href="img/icon.png">
 </head>
-<body>        
+<body>
+    <div class="content_contacts">        
     <section class="godlike"><div class="wrap">«Люди, десятки тысяч замечательных, инициативных, с большим сердцем и открытой душой людей побуждают меня вот уже более 20 лет принимать в Государственной Думе такие решения, которые направленны на то, чтобы их жизнь в малых городах, селах и деревнях России и дорогого мне Урала становилась день ото дня более комфортной, а значит счастливой – с верой в завтрашний день!»</div></section>    
     <section class="banner">
         <div class="wrap">
@@ -76,11 +77,11 @@
 
 
     
-     <footer class="footer">
+     <footer class="footer_contacts">
         <div class="wrap footer_wrap">© 2002-2021. Информационный сайт З.A. Муцоева</div>
     </footer>
 
-
+</div>
 
 </body>
 </html>
