--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
     <section class="banner">
         <div class="wrap">
              <a href="index.html"><div class="title">Муцоев<br>Зелимхан Аликоевич</div></a>
-             <div class="subtitle">Депутат Государственной Думы Федерального Собрания Российской Федерации</div>
+             <div class="subtitle">Депутат Государственной Думы<br> Федерального Собрания<br> Российской Федерации</div>
          </div>
      </section>
 
