--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="banner">
             <div class="wrap">
                 <div class="title">Муцоев<br>Зелимхан Аликоевич</div>
-                <div class="subtitle">Депутат Государственной Думы Федерального Собрания Российской Федерации</div>
+                <div class="subtitle">Депутат Государственной Думы<br> Федерального Собрания<br> Российской Федерации</div>
             </div>
 
         </section>
